revised index.js and ejs pages to render, delete, and add lists

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") -%>
 
 <div class="d-flex justify-content-center align-items-center login-container">
-    <form class="login-form text-center" action="/login" method="POST">
+    <form class="login-form text-center" action="/home" method="POST">
         <h1 class="mb-1 font-weight-light"><svg id="loginLogo" width="93" height="79" viewBox="0 0 93 79"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
