--- a/views/partials/user-page-header.ejs
+++ b/views/partials/user-page-header.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>Reminders!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/user-page.css">
@@ -14,19 +14,3 @@
     <script src="https://use.fontawesome.com/41dd587675.js"></script>
   </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light sticky-top">
-        <svg width="93" height="79" viewBox="0 0 93 79" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M61.6123 42.6768H50.06C47.9421 42.6768 46.2092 44.1541 46.2092 45.9596V55.8081C46.2092 57.6137 47.9421 59.091 50.06 59.091H61.6123C63.7302 59.091 65.4631 57.6137 65.4631 55.8081V45.9596C65.4631 44.1541 63.7302 42.6768 61.6123 42.6768ZM61.6123 9.8485V13.1313H30.8062V9.8485C30.8062 8.04294 29.0733 6.56567 26.9554 6.56567C24.8375 6.56567 23.1046 8.04294 23.1046 9.8485V13.1313H19.2538C14.9795 13.1313 11.5908 16.0859 11.5908 19.697L11.5523 65.6566C11.5523 69.2678 14.9795 72.2223 19.2538 72.2223H73.1646C77.4005 72.2223 80.8662 69.2678 80.8662 65.6566V19.697C80.8662 16.0859 77.4005 13.1313 73.1646 13.1313H69.3139V9.8485C69.3139 8.04294 67.581 6.56567 65.4631 6.56567C63.3452 6.56567 61.6123 8.04294 61.6123 9.8485ZM69.3139 65.6566H23.1046C20.9867 65.6566 19.2538 64.1794 19.2538 62.3738V29.5455H73.1646V62.3738C73.1646 64.1794 71.4318 65.6566 69.3139 65.6566Z" fill="#499491"/>
-            </svg><h1 id="headerLogo" class="font-weight-gl">memento</h1>  
-    </nav>
-    <div class="row d-flex justify-content-center container">
-        <div class="col-md-8">
-            <div class="card-hover-shadow-2x mb-3 card">
-                <div class="card-header-tab card-header">
-                    <div class="card-header-title font-size-lg text-capitalize font-weight-normal"><i class="fa fa-tasks"></i>&nbsp;Task Lists</div>
-                </div>
-                <div class="scroll-area-sm">
-                    <perfect-scrollbar class="ps-show-limits">
-                        <div style="position: static;" class="ps ps--active-y">
-                            <div class="ps-content">
-                                <ul class=" list-group list-group-flush">
