--- a/views/beta_reminderlist.ejs
+++ b/views/beta_reminderlist.ejs
@@ -74,7 +74,7 @@
                                                     <form action="/deleteReminder" method="POST">
                                                         <input type="hidden" name="listName" value="<%= item.name %>"></input>
                                                         <input type="hidden" name="userId" value="<%= user._id %>"></input>
-                                                        <button 
+                                                        <button  data-toggle="modal" data-target="#weather-modal"
                                                         class="border-0 btn-transition btn btn-outline-danger"
                                                         name="listId"
                                                         value="<%= item._id %>"> 
@@ -87,9 +87,102 @@
                                     </li>
                                     <% }) %> 
 
+                                    <li class="list-group-item">
+                                      <div class="widget-content p-0">
+                                          <div class="widget-content-wrapper">
+                                              <div class="widget-content-left mr-2">
+                                                  <div class="custom-checkbox custom-control"> <input class="custom-control-input" id="exampleCustomCheckbox12" type="checkbox"><label class="custom-control-label" for="exampleCustomCheckbox12">&nbsp;</label> </div>
+                                              </div>
+                                              <div class="widget-content-left">
 
+                                                  <!-- TITLE goes here -->
+                                                  <div class="widget-heading">Groceries
+                                                  </div>
 
+                                                  <!--Calendar entry goes here-->
+                                                  <small>March 30, 2020</small>
 
+                                                  <!--Details go here-->
+                                                  <div class="widget-subheading"><i>By Bob</i></div>
+
+                                                  <!--TAGS can be attached here-->
+                                                  
+                                              </div>
+                                              <div class="widget-content-right"> <button  data-toggle="modal" data-target="#weather-modal" class="border-0 btn-transition btn btn-outline-success"><svg id="sun" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sun" class="svg-inline--fa fa-sun fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"></path></svg></button> <button class="border-0 btn-transition btn btn-outline-danger"> <i class="fa fa-trash"></i> </button> </div>
+                                          </div>
+                                      </div>
+                                  </li>
+                                  
+                                    <!-- MODAL FOR API -->
+                                    <div class="modal fade" id="weather-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                      <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                          <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Weather</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                              <span aria-hidden="true">&times;</span>
+                                            </button>
+                                          </div>
+                                          <div class="modal-body">
+                                            <div class="container-fluid">
+                                              <div id="WeatherBoard">
+                                                <div class="row">
+                                                  <table width="100%"><tr>
+                                                    <td>
+                                                      <i class="fa fa-map-marker fa-2x"></i>
+                                                      <!--COUNTRY API-->
+                                                      <span id="countryName">Country</span>
+                                                    </td>
+                                                    </tr>
+                                                  </table>
+                                                </div>
+                                                <!---CITY API-->
+                                                <span id="cityName">City</span>
+                                                
+                                                <table width="100%">
+                                                  <tr>
+                                                    <td id="temperatureCell">
+                                                      <!--TEMP API-->
+                                                      <span id="temperature">15.0 </span><span id="temperatureUnit"><sup>o</sup>C</span>
+                                                    </td>
+                                                    <td>
+                                                      <table>
+                                                        <tr height="30px">
+                                                          <td width="50px" style="text-align:center"><i class="fa fa-tint fa-2x"></i></td>
+                                                          <!--HUMIDTY API-->
+                                                          <td><span id="humidity">100%</span></td>
+                                                        </tr>
+                                                        <tr height="30px">
+                                                          <td style="text-align:center"><i class="fa fa-wifi fa-1g fa-rotate-90"></i></td>
+                                                          <!--WIND SPEED API-->
+
+                                                          <td><span id="windSpeed">35km/h</span></td>
+                                                        </tr>
+                                                        <tr height="32px">
+                                                          <td style="text-align:center"><i class="fa fa-compass fa-2x"></i></td>
+                                                          <!--WIND DIRECTION API-->
+                                                          <td><span id="windDirection">55</span><sup>o</sup></td>
+                                                        </tr>            
+                                                      </table>
+                                                    </td>
+                                                  </tr>
+                                                </table>
+                                            
+                                                <br>
+                                              </div>
+                                              <div id="errorMessage"></div>
+                                            </div>
+                                            
+                                          </div>
+                                          <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    
+                                    <!--MODAL FOR API ENDS-->
 
 
                                 </ul>
@@ -98,6 +191,14 @@
                     </perfect-scrollbar>
                 </div>
                 <div class="d-block text-right card-footer">
+                  <button
+                  id ="export-button"
+                  type="button"
+                  class="btn btn-primary"
+                >
+                  Export
+                </button>
+
                   <!-- MY PASTE STARTS HERE -->
             <button
             type="button"
@@ -162,6 +263,18 @@
                     </div>
                   </div>
 
+                  <!--Generated tags-->
+                  <div class="form-group">
+                    <label for="recipient-name" class="col-form-label">Add Tags:</label>
+                    <input type="text" class="form-control" id="generate-tag">
+                    
+                    <div class="badge badge-pill badge-info ml-2">NEW</div>
+                    <br>
+                    <button id="generate-tag-button" type="button" class="btn btn-primary">
+                        Add a tag
+                      </button>
+                 </div>
+
                   <div class="modal-footer">
                     <button
                       type="button"
@@ -174,6 +287,8 @@
                       Save changes
                     </button>
                   </div>
+
+
                 
                 </form>
 
