geo location works set as array

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -143,5 +143,30 @@
                 
                 </form>
 
+                <script>
+self.onload = getLocation(); 
+
+var x = document.getElementById("test");
+coords = []
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+  console.log("Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude);
+  coords.push(position.coords.latitude, position.coords.longitude);
+  console.log('my array coords are: ' + coords)
+  return (position.coords.latitude, position.coords.longitude)
+  
+}
+
+
+                </script>
 
 <%- include("partials/user-page-footer") -%>
