added post request for longitude and latitude "/"

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -123,7 +123,10 @@
                     <div class="form-group">
                       <!-- Reminder Header -->
                       <label for="recipient-name" class="col-form-label">Title:</label>
+                      <input id="coordinateLongitude" type="hidden" name="longitude" value=""></input>
+                      <input id="coordinateLatitude" type="hidden" name="latitude" value=""></input>
                       <input type="hidden" name="userId" value="<%= user._id %>"></input>
+                      
                       <input type="text" class="form-control" id="recipient-name" name="listTitle">
                     </div>
                   </div>
@@ -161,10 +164,16 @@ function showPosition(position) {
   console.log("Latitude: " + position.coords.latitude + 
   "<br>Longitude: " + position.coords.longitude);
   coords.push(position.coords.latitude, position.coords.longitude);
-  console.log('my array coords are: ' + coords)
-  return (position.coords.latitude, position.coords.longitude)
+  console.log('my array coords are: ' + coords);
+  document.querySelector("#coordinateLongitude").value = position.coords.longitude;
+  document.querySelector("#coordinateLatitude").value = position.coords.latitude;
+
   
+  return (position.coords.latitude, position.coords.longitude);
 }
+
+
+
 
 
                 </script>
