--- a/views/list.ejs
+++ b/views/list.ejs
@@ -43,12 +43,12 @@
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
                                                   <form action="/editReminder" method="POST">
-                                                    
-                                                    <input type="hidden" name="listName" value="<%= item.name %>"></input>
+                                                    <input type="hidden" name="currentListId" value="<%= listId %>"></input>
+                                                    <input type="hidden" name="reminderName" value="<%= item.name %>"></input>
                                                     <button 
                                                     type="submit" 
                                                     class="btn btn-info btn-sm"
-                                                    name="listId"
+                                                    name="reminderId"
                                                     value="<%= item._id %>">
                                                     Edit
                                                     </button>
@@ -77,10 +77,11 @@
                                                 </div>
                                                 <div class="widget-content-right"> 
                                                     <form action="/umbrellaReminder" method="POST">
-                                                        <input type="hidden" name="listName" value="<%= item.name %>"></input>
+                                                        <input type="hidden" name="currentListId" value="<%= listId %>"></input>
+                                                        <input type="hidden" name="reminderName" value="<%= item.name %>"></input>
                                                         <button 
                                                         class="border-0 btn-transition btn btn-outline-success" 
-                                                        name="listId"
+                                                        name="reminderId"
                                                         value="<%= item._id %>">
                                                             <i class="fa fa-umbrella"></i></i>
                                                         </button>   
@@ -158,7 +159,7 @@
                     <div class="form-group">
                       <!-- Reminder Header -->
                       <label for="recipient-name" class="col-form-label">Title:</label>
-                      <input type="hidden" name="userId" value="<%= user._id %>"></input>
+                      <input type="hidden" name="listId" value="<%= listId %>"></input>
                       <input type="text" class="form-control" id="recipient-name" name="listTitle">
                     </div>
                     <!--Reminder Date-->
