fixed bug for delete function

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -59,7 +59,7 @@
 
                                                     <!-- TITLE goes here -->
                                                     <div class="widget-heading">
-                                                        <%= item.name %> 
+                                                        <%= item.title %> 
                                                     </div>
 
                                                     <!--Calendar entry goes here-->
