--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -26,7 +26,7 @@
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
 
-                                                  <form action="/lists/<%= item.name %>/<%= item._id %>" method="GET">
+                                                  <form action="/lists/<%= item.title %>/<%= item._id %>" method="GET">
                                                     <input type="hidden" name="listName" value="<%= item.name %>"></input>
                                                     <button 
                                                     type="submit" 
@@ -42,7 +42,7 @@
 
                                                     <!-- TITLE goes here -->
                                                     <div class="widget-heading">
-                                                        <%= item.name %> 
+                                                        <%= item.title %> 
                                                     </div>
 
 
