--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -165,6 +165,7 @@ function showPosition(position) {
   "<br>Longitude: " + position.coords.longitude);
   coords.push(position.coords.latitude, position.coords.longitude);
   console.log('my array coords are: ' + coords);
+  console.log(position.coords)
   document.querySelector("#coordinateLongitude").value = position.coords.longitude;
   document.querySelector("#coordinateLatitude").value = position.coords.latitude;
 
