created redirect back to the list

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -124,6 +124,7 @@
                   <!-- MY PASTE STARTS HERE -->
           <form action="/export" method="POST" style="display: inline-block;">
             <input type="hidden" name="listId" value="<%= listId %>"></input>
+            <input type="hidden" name="listName" value="<%= listName %>"></input>
             <button id ="export-button" type="submit" class="btn btn-primary">
             Export
             </button>            
