--- a/views/beta-list.ejs
+++ b/views/beta-list.ejs
@@ -20,6 +20,11 @@
             </svg><h1 id="headerLogo" class="font-weight-gl">memento</h1>  
     </nav>
     <div class="row d-flex justify-content-center container">
+      <h2>Hello, User!</h2>
+          <!-- Search form -->
+            <div class="active-pink-3 active-pink-4 mb-4">
+              <input class="form-control" type="text" placeholder="Search through reminders" aria-label="Search">
+            </div>
         <div class="col-md-8">
             <div class="card-hover-shadow-2x mb-3 card">
                 <div class="card-header-tab card-header">
