--- a/views/list.ejs
+++ b/views/list.ejs
@@ -24,6 +24,12 @@
 
 <div class="row d-flex justify-content-center container">
   <div class="col-md-8">
+      <h2>Hello, <%= user.username %>!</h2>
+            <!-- Search form -->
+              <div class="active-pink-3 active-pink-4 mb-4">
+                <input class="form-control" type="text" placeholder="Search through reminders" aria-label="Search">
+              </div>
+
       <div class="card-hover-shadow-2x mb-3 card">
           <div class="card-header-tab card-header">
               <div class="card-header-title font-size-lg text-capitalize font-weight-normal">
