api stuff logic needs to be refined a little bit

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -90,7 +90,8 @@
                                                       data-toggle="modal" 
                                                       data-target="#weather-modal" 
                                                       class="border-0 btn-transition btn btn-outline-success">
-                                                          <i class="fa fa-umbrella"></i></i>
+                                                          
+                                                          <i class= "<%= isRaining%>"</i></i>
                                                       </button> 
                                                     
                                                     <form action="/deleteReminder" method="POST">
