centered page and inserted unique user intro

--- a/public/css/user-page.css
+++ b/public/css/user-page.css
@@ -12,7 +12,7 @@ nav {
   background: #F7FED8;
 }
 
-h2 {
+h2, h3, h4 {
   text-align: center;
 
 }
@@ -38,8 +38,13 @@ svg{
   width:20px;
 }
 
-.container {
+/* .container {
   margin-top: 100px
+} */
+
+.container {
+  margin: auto;
+  margin-top: calc(150px + 5vh);
 }
 
 .card {
