--- a/views/list.ejs
+++ b/views/list.ejs
@@ -29,7 +29,7 @@
     <!-- Search form -->
       <div class="active-pink-3 active-pink-4 mb-4">
         <input class="form-control" type="text" placeholder="Search through reminders" aria-label="Search">
-      </div
+      </div>
       <div class="card-hover-shadow-2x mb-3 card">
           <div class="card-header-tab card-header">
               <div class="card-header-title font-size-lg text-capitalize font-weight-normal">
