--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -10,7 +10,7 @@
 <div class="row d-flex justify-content-center container">
   <div class="col-md-8">
     <h2>Hello, <%= capitalizedUsername %>!</h2>
-      <div class="card-hover-shadow-2x mb-3 card">
+      <div class="card-hover-shadow-2x mb-3 card" style="margin-top: 50px;">
           <div class="card-header-tab card-header">
               <div class="card-header-title font-size-lg text-capitalize font-weight-normal"><i class="fa fa-tasks"></i>&nbsp;Task Lists</div>
           </div>
